# CSC4005-FA22

./: .gitignore  README.md
Tutorial 2/CSC4005_2022Fall_Demo-main/cuda_demo/: cuda_hello
hw01/: CMakeLists.txt  README.md  clean.sh  data.txt  data_seq.txt  data_seq.txt.backup  flowchart.drawio  job.sh  run.sh  sampling.sh
hw01/analysis/: main.ipynb
hw01/analysis/.ipynb_checkpoints/: main-checkpoint.ipynb
hw01/report/: CSC4005_HW01.tex
hw01/scripts/: build.sh  demo.sh
hw01/src/: CMakeLists.txt  main.cpp  main.cpp.backup  main.cpp.min_max  main.seq.cpp  utils.h
hw02/: Mandelbrot-set-description.ppt  README.md  flowchart_mpi.drawio  flowchart_pthread.drawio  job.sh  runtime_detailed_mpi_4.txt  runtime_detailed_pt_4.txt  runtime_mpi.txt  runtime_pt.txt
hw02/analysis/: main.ipynb
hw02/data/: runtime_detailed_mpi_1.txt  runtime_detailed_mpi_10.txt  runtime_detailed_mpi_11.txt  runtime_detailed_mpi_12.txt  runtime_detailed_mpi_13.txt  runtime_detailed_mpi_14.txt  runtime_detailed_mpi_15.txt  runtime_detailed_mpi_16.txt  runtime_detailed_mpi_17.txt  runtime_detailed_mpi_18.txt  runtime_detailed_mpi_19.txt  runtime_detailed_mpi_2.txt  runtime_detailed_mpi_20.txt  runtime_detailed_mpi_3.txt  runtime_detailed_mpi_4.txt  runtime_detailed_mpi_5.txt  runtime_detailed_mpi_6.txt  runtime_detailed_mpi_7.txt  runtime_detailed_mpi_8.txt  runtime_detailed_mpi_9.txt  runtime_detailed_pth_1.txt  runtime_detailed_pth_10.txt  runtime_detailed_pth_11.txt  runtime_detailed_pth_12.txt  runtime_detailed_pth_13.txt  runtime_detailed_pth_14.txt  runtime_detailed_pth_15.txt  runtime_detailed_pth_16.txt  runtime_detailed_pth_17.txt  runtime_detailed_pth_18.txt  runtime_detailed_pth_19.txt  runtime_detailed_pth_2.txt  runtime_detailed_pth_20.txt  runtime_detailed_pth_3.txt  runtime_detailed_pth_4.txt  runtime_detailed_pth_5.txt  runtime_detailed_pth_6.txt  runtime_detailed_pth_7.txt  runtime_detailed_pth_8.txt  runtime_detailed_pth_9.txt  (+23 more)
hw02/report/: CSC4005_HW02.tex
hw02/scripts/: build.sh  clean.sh  demo.mpi.sh  demo.pthread.sh  demo.pthread_ds.sh  demo.seq.sh  demo.sh  run.sh  sampling.sh
hw02/src/: CMakeLists.txt  main.mpi.cpp  main.pthread.cpp  main.pthread_ds.cpp  main.seq.cpp  utils.h
hw03/: CMakeLists.txt  N-Body-Simulation-description.ppt  README.md  demo.webm  flowchart.drawio
hw03/analysis/: main.ipynb
hw03/data/: runtime_cuda.txt  runtime_mpi.txt  runtime_omp.txt  runtime_pth.txt  runtime_seq.txt
hw03/report/: CSC4005_HW03.tex
hw03/scripts/: build.sh  build_nogui.sh  mcompile.sh  run.sh  sampling.sh  sampling_cuda.sh  scancel_all.sh
hw03/src/: CMakeLists.txt  const.cuh  const.h  cudalib.cu  gui.h  main.cpp  main.mpi.cpp  utils.cuh  utils.h
hw04/: demo.webm  flowchart.drawio  heat-distribution-description.ppt
hw04/analysis/: main.ipynb
hw04/data/: runtime_cuda.txt  runtime_mpi.txt  runtime_omp.txt  runtime_pth.txt  runtime_seq.txt
hw04/report/: CSC4005_HW04.tex
hw04/scripts/: sampling.sh  sampling_cuda.sh
hw04/src/: CMakeLists.txt  const.cuh  const.h  cudalib.cu  gui.h  main.cpp  main.mpi.cpp  test.cpp  utils.cuh  utils.h
sbatch_trial/: Makefile  job.sh  main  main.cpp  slurm-959.out
slides/: Bitonic-Sort.ppt  Introduction_to_CUDA_C.pptx  slide-0.pptx  slides-01.pptx  slides-02.pptx  slides-03.pptx  slides-04.pptx  slides-05.pptx  slides-06.pptx  slides-07.pptx  slides-08.pptx
tutorial2/CSC4005_2022Fall_Demo-main/computation_intensive_mpi/: partSim
tutorial2/CSC4005_2022Fall_Demo-main/mpi_demo/: a.out
tutorial2/CSC4005_2022Fall_Demo-main/pthread_demo/: a.out
